--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "private": "true",
   "dependencies": {
     "@hotwired/stimulus": "^3.2.1",
+    "@hotwired/stimulus-webpack-helpers": "^1.0.1",
     "@hotwired/turbo-rails": "^7.3.0",
+    "@popperjs/core": "^2.11.7",
+    "bootstrap": "^5.2.3",
     "webpack": "^5.82.1",
     "webpack-cli": "^5.1.1"
   },
